<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smartcampus</string>
    <string name="titleEvents">Events</string>
    <string name="categories">Categories:</string>
    <string name="eventStart">Start:</string>
    <string name="eventEnd">End:</string>
    <string name="locations">Locations:</string>
    <string name="providers">Providers:</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="logged"></string>
    <string name="notLogged">Sign in</string>
    <string name="nearby">Nearby</string>
    <string name="plsLogin">You need to sign in!</string>
    <string name="plsNet">You need internet connection!</string>
    <string name="plsNetAndLogin">Internet connection and logged in status are needed!</string>
    <string name="functionNet">You need to have internet connection for this function!</string>
    <string name="lowNet">Internet connection is too weak!</string>
    <string name="error">Something\'s gone wrong!</string>
    <string name="setDate">You need to set the dates!</string>
    <string name="fillFields">You need to fill the fields!</string>
    <string name="badIDorPass">Wrong identifier or password!</string>
    <string name="ics">This function is only available from Ice Cream Sandwich version!</string>
    <string name="notFresh">No internet connection, events may not be up to date!</string>
    <string name="pPic">profile picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="dateFilter">Date filter</string>
    <string name="hintDateFrom">from</string>
    <string name="hintDateTo">to</string>
    <string name="timeFilter">Time filter</string>
    <string name="hintCategory">category</string>
    <string name="hintProvider">provider</string>
    <string name="hintLocation">location</string>
    <string name="menuCategory">Category</string>
    <string name="menuProvider">Provider</string>
    <string name="menuLocation">Location</string>
    <string name="menuFilter">Filter</string>
    <string name="menuRating">Rate this event</string>
    <string name="menuSubscribers">Subscribers</string>
    <string name="menuExport">Export to calendar</string>
    <string name="menuCalendar">Calendar view</string>
    <string name="menuModPic">Modify picture</string>
    <string name="menuAbout">About the app</string>
    <string name="menuLogout">Sign out</string>
    <string name="menuSearch">Search</string>
    <string name="query">Query events</string>
    <string name="identifier">Identifier:</string>
    <string name="password">Password:</string>
    <string name="opinion">Opinion:</string>
    <string name="count">Current standing:</string>
    <string name="openDrawer">OpenDrawer</string>
    <string name="closeDrawer">CloseDrawer</string>
    <string name="selectPicture">Select picture</string>
    <string name="detailsTitle">Event</string>
    <string name="subscribers">Subscribers</string>
    <string name="loginTitle">Sign in</string>
    <string name="subscribedEvents">Subscribed events</string>
    <string name="queryEvents">Query events</string>
    <string name="noWifiResults">No results, check wireless status.</string>
    <string name="noAccessPoints">No access points in range.</string>
    <string name="about">About</string>
    <string name="pleaseWait">Please wait ...</string>
    <string name="noItemsForCalendar">There are no events!</string>

</resources>