<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/deik"
    android:padding="@dimen/paddingDefault" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textDateCategory"
            style="@style/MyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/welcomeMarginBottom2"
            android:layout_marginRight="@dimen/welcomeMarginRight4"
            android:gravity="left"
            android:text="@string/dateFilter"
            android:textSize="@dimen/textBigSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textDateFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textDateCategory"
            android:layout_marginBottom="@dimen/welcomeMarginBottom3"
            android:layout_marginRight="@dimen/welcomeMarginRight2"
            android:focusable="false"
            android:gravity="left"
            android:hint="@string/hintDateFrom"
            android:textSize="@dimen/textNormalSize"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/textDateTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textDateFrom"
            android:layout_alignRight="@+id/textDateFrom"
            android:layout_below="@+id/textDateFrom"
            android:layout_marginBottom="@dimen/welcomeMarginBottom1"
            android:focusable="false"
            android:gravity="left"
            android:hint="@string/hintDateTo"
            android:textSize="@dimen/textNormalSize"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/textTimeCategory"
            style="@style/MyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textDateTo"
            android:layout_marginBottom="@dimen/welcomeMarginBottom2"
            android:layout_marginRight="@dimen/welcomeMarginRight4"
            android:gravity="left"
            android:text="@string/timeFilter"
            android:textSize="@dimen/textBigSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textTimeFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textTimeCategory"
            android:layout_marginBottom="@dimen/welcomeMarginBottom3"
            android:layout_marginRight="@dimen/welcomeMarginRight1"
            android:focusable="false"
            android:gravity="left"
            android:hint="@string/hintDateFrom"
            android:textSize="@dimen/textNormalSize" />

        <EditText
            android:id="@+id/textTimeTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textTimeFrom"
            android:layout_alignRight="@+id/textTimeFrom"
            android:layout_below="@+id/textTimeFrom"
            android:focusable="false"
            android:gravity="left"
            android:hint="@string/hintDateTo"
            android:textSize="@dimen/textNormalSize" />

        <MultiAutoCompleteTextView
            android:id="@+id/autoCategories"
            style="@style/CustomAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/textTimeTo"
            android:layout_below="@id/textTimeTo"
            android:layout_marginRight="@dimen/welcomeMarginRight3"
            android:layout_marginTop="@dimen/welcomeMarginTop2"
            android:hint="@string/hintCategory"
            android:inputType="textNoSuggestions"
            android:visibility="gone" />

        <MultiAutoCompleteTextView
            android:id="@+id/autoProviders"
            style="@style/CustomAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/textTimeTo"
            android:layout_below="@id/autoCategories"
            android:layout_marginRight="@dimen/welcomeMarginRight3"
            android:layout_marginTop="@dimen/welcomeMarginTop2"
            android:hint="@string/hintProvider"
            android:inputType="textNoSuggestions"
            android:visibility="gone" />

        <MultiAutoCompleteTextView
            android:id="@+id/autoLocations"
            style="@style/CustomAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/textTimeTo"
            android:layout_below="@id/autoProviders"
            android:layout_marginRight="@dimen/welcomeMarginRight3"
            android:layout_marginTop="@dimen/welcomeMarginTop2"
            android:hint="@string/hintLocation"
            android:inputType="textNoSuggestions"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textTimeTo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/welcomeMarginTop1"
            android:text="@string/query"
            android:textSize="@dimen/textBigSize" />
    </RelativeLayout>

</ScrollView>