<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/deik"
    android:orientation="vertical"
    android:padding="@dimen/paddingDefault" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/loginMarginBottom2"
        android:orientation="horizontal" >

        <TextView
            style="@style/MyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/identifier"
            android:textSize="@dimen/textBigSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:inputType="textPersonName"
            android:textSize="@dimen/textNormalSize"
            tools:ignore="TextFields" />

        <requestFocus />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/loginMarginBottom1"
        android:orientation="horizontal" >

        <TextView
            style="@style/MyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password"
            android:textSize="@dimen/textBigSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:inputType="textPassword"
            android:textSize="@dimen/textNormalSize" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notLogged"
        android:textSize="@dimen/textBigSize" />

</LinearLayout>